[gd_scene load_steps=12 format=3 uid="uid://dbvtqbytiutbt"]

[ext_resource type="Script" uid="uid://cpc5i5nyprgkt" path="res://Scripts/battle.gd" id="1_6t8i5"]
[ext_resource type="Texture2D" uid="uid://bmrl5u6g4y6x" path="res://Images&Video/New Project.svg" id="1_7sfm4"]
[ext_resource type="Texture2D" uid="uid://bv5kr3a6nqjyd" path="res://Images&Video/icon.svg" id="2_i431l"]
[ext_resource type="Texture2D" uid="uid://ed80h1p57mx7" path="res://Atlases/tooth walker/tooth walker sprite-Sheet.png" id="3_6t8i5"]
[ext_resource type="Script" uid="uid://bitnj3dmwqth7" path="res://Scripts/player_battle.gd" id="4_dw4jg"]
[ext_resource type="Script" uid="uid://dmyhxqioigvs" path="res://Scenes/ui.gd" id="6_f6xt6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dw4jg"]
atlas = ExtResource("3_6t8i5")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0npn6"]
atlas = ExtResource("3_6t8i5")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhv3b"]
atlas = ExtResource("3_6t8i5")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcjiy"]
atlas = ExtResource("3_6t8i5")
region = Rect2(192, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ol6im"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw4jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0npn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhv3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcjiy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="battle" type="Node2D"]
script = ExtResource("1_6t8i5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_7sfm4")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(-716, 276)
scale = Vector2(2, 2)
texture = ExtResource("2_i431l")
script = ExtResource("4_dw4jg")

[node name="spawntimer" type="Timer" parent="Player"]
wait_time = 0.76
autostart = true

[node name="atktimer" type="Timer" parent="Player"]
wait_time = 1.985
autostart = true

[node name="Enemy" type="AnimatedSprite2D" parent="."]
position = Vector2(306, -250)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_ol6im")
autoplay = "default"
frame_progress = 0.0449644

[node name="UI" type="Node" parent="."]
script = ExtResource("6_f6xt6")

[node name="HPP" type="Label" parent="UI"]
offset_left = -184.0
offset_top = 238.0
offset_right = -144.0
offset_bottom = 261.0
scale = Vector2(5.85301, 6.24203)
text = "20"

[node name="ATKP" type="Label" parent="UI"]
offset_left = -153.0
offset_top = 389.0
offset_right = -143.0
offset_bottom = 438.0
scale = Vector2(7.5676, 7.39991)
text = "5
"

[node name="HPE" type="Label" parent="UI"]
offset_left = 779.0
offset_top = -464.0
offset_right = 819.0
offset_bottom = -441.0
scale = Vector2(5.57269, 5.85972)
text = "20"

[node name="ATKE" type="Label" parent="UI"]
offset_left = 817.0
offset_top = -289.0
offset_right = 857.0
offset_bottom = -240.0
scale = Vector2(8.78934, 6.84045)
text = "5
"

[node name="PlayerStats" type="Label" parent="UI"]
offset_left = -392.0
offset_top = 226.0
offset_right = -352.0
offset_bottom = 275.0
scale = Vector2(7.22307, 6.72)
text = "Hp:
Atk:"

[node name="EnemyStats" type="Label" parent="UI"]
offset_left = 573.0
offset_top = -467.0
offset_right = 613.0
offset_bottom = -418.0
scale = Vector2(7.22307, 6.72)
text = "Hp:
Atk:"

[node name="Tips" type="Label" parent="UI"]
offset_left = -1150.0
offset_top = -636.0
offset_right = -841.0
offset_bottom = -613.0
scale = Vector2(4.46146, 4.5181)
text = "Click appearing squares to deal damage"

[connection signal="init" from="." to="Player" method="_on_battle_init"]
[connection signal="init" from="." to="UI" method="_on_battle_init"]
[connection signal="EnemyUpdate" from="Player" to="UI" method="on_enemy_update"]
[connection signal="PlayerUpdate" from="Player" to="UI" method="_on_player_update"]
[connection signal="timeout" from="Player/spawntimer" to="." method="_on_spawntimer_timeout"]
[connection signal="timeout" from="Player/atktimer" to="Player" method="_on_timer_timeout"]
